# oyui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  devenv.nix  flake.nix  make.nix  scripts.nix  shell.nix
crates/core/: Cargo.toml
crates/core/src/: cache_map.rs  diff.rs  diff_cache.rs  lazy.rs  lib.rs  merge.rs  syntax.rs  syntax_cache.rs  tree.rs  worker.rs
crates/oyui/: CHANGELOG.md  Cargo.toml  build.rs  readme.md
crates/oyui-rune-actions/: CHANGELOG.md  Cargo.toml  readme.md
crates/oyui-rune-actions/derive/: Cargo.toml  readme.md
crates/oyui-rune-actions/derive/src/: lib.rs
crates/oyui-rune-actions/src/: lib.rs
crates/oyui-rune-actions/tests/: tests_actions.rs
crates/oyui-tasker/: CHANGELOG.md  Cargo.toml  readme.md
crates/oyui-tasker/derive/: Cargo.toml  lib.rs  readme.md
crates/oyui-tasker/src/: lib.rs  macro_register_tasker.rs  worker.rs
crates/oyui-tasker/tests/: integration_test.rs
crates/oyui/src/: app.rs  cli.rs  diff.rs  diff_cache.rs  draw.rs  glob.rs  input.rs  main.rs  syntax.rs  terminal_colors.rs  tree.rs  ui_state.rs  view.rs
crates/oyui/src/actions/: define.rs  keybinds.rs  mod.rs  state.rs
crates/oyui/src/actions/handlers/: global_handler.rs  mod.rs  theme_handler.rs
crates/oyui/src/actions/handlers/theme_handler/: macros.rs  mod.rs  utils.rs
crates/oyui/src/actions/handlers/view_handlers/: file_handler.rs  mod.rs  tree_handler.rs
crates/oyui/src/actions/handlers/view_handlers/file_handler/: mod.rs
crates/oyui/src/actions/handlers/view_handlers/file_handler/file_staging_handler/: hunk_mutations.rs  mod.rs  operations.rs  staging_session.rs  staging_sync.rs  utils.rs
crates/oyui/src/app/: commands.rs  draw.rs  events.rs  merge.rs  mod.rs  worker.rs
crates/oyui/src/commands/: diff.rs  language_server.rs  mod.rs
crates/oyui/src/commons/: cache_map.rs  glob.rs  input.rs  lazy.rs  mod.rs  tracing.rs
crates/oyui/src/commons/file_icon/: devicon.rs  mod.rs
crates/oyui/src/config/: builtin.rs  define_default_theme.rs  mod.rs  script.rs  theme.rs
crates/oyui/src/view/: config_error.rs  confirm_window.rs  file.rs  mod.rs  tree.rs
crates/oyui/src/view/file/: input.rs  mapping.rs  mod.rs
crates/oyui/src/view/file/input/: context.rs  folding.rs  handlers.rs  keybinds.rs  mod.rs  navigation.rs  scroll.rs  staging.rs
crates/oyui/src/view/file/render/: line.rs_  mod.rs  separator.rs  spans.rs  style.rs
crates/oyui/src/view/file/render/line/: mod.rs
crates/oyui/src/view/file/render/line/gutter/: indicator.rs  mod.rs  number.rs  sign.rs
crates/oyui/src/view/file/render/line/text/: mod.rs  spans_wrapper.rs
crates/oyui/src/view/file/utils/: colors.rs
crates/oyui/src/worker/: context.rs  mod.rs
crates/oyui/src/worker/events/: diff_update.rs  file_opened.rs  file_syntax_update.rs  theme_update.rs
crates/oyui/src/worker/tasks/: calculate_file_tree.rs  full_diff.rs  stats.rs  syntax.rs  watch_config.rs
crates/oyui/themes/: carbonfox.toml  flexoki-dark.tmTheme  flexoki-light.tmTheme  nightowl-dark.tmTheme  nightowl-light.tmTheme  palenight-dark.tmTheme  quaoar.tmTheme  synthwave84-dark.tmTheme  weywot.tmTheme
crates/syndiff/: Cargo.toml  readme.md
crates/syndiff/src/: diff_source.rs  lib.rs
crates/syndiff/tests/: diffing.rs
docs/: actions-api.md  bug-tracking.md  feature-tracking.md  themes.md
scripts/: make-cli.nix  release.ts
scripts/release/: .gitignore  deps.ts  package.json  release-crates.ts  release-gh.ts  release-start.ts  release.ts
scripts/theme-screen/: script.ts  theme-issues.json
