[workspace]
resolver = "2"
members = ["crates/oyui", "crates/oyui-tasker"]

[workspace.dependencies]
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
imara-diff = "0.2"
syntect = "5.2"
two-face = "0.4"
walkdir = "2.4"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "registry"] }
clap = { version = "4.0", features = ["derive"] }
typed-builder = { version = "0.23.2" }
eyre = "0.6.12"
tracing-flame = "0.2.0"
tracing-appender = "0.2.5"
rayon = "1.12.0"
