[workspace]
resolver = "2"
members = ["crates/oyui-tasker", "crates/oyui-rune-actions", "crates/syndiff", "crates/oyui" ]

[workspace.dependencies]
oyui-tasker = { path = "crates/oyui-tasker", version = "0.0.2" }
oyui-rune-actions = { path = "crates/oyui-rune-actions", version = "0.0.2" }
oyui-syndiff = { path = "crates/syndiff", version = "0.0.2" }

ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
imara-diff = "0.2"
syntect = { version = "5.2" }
two-face = "0.4"
walkdir = "2.4"
tokio = { version = "1.37", features = ["full"] }
once_cell = "1.21.4"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "registry"] }
clap = { version = "4.0", features = ["derive"] }
typed-builder = { version = "0.23.2" }
tracing-flame = "0.2.0"
tracing-appender = "0.2.5"
rayon = "1.12.0"
infer = "0.19.0"
arrayvec = "0.7.6"
rustc-hash = "2.1.1"
smallvec = "1.15.1"
strsim = "0.11.1"
indoc = "2.0.7"
rstest = "0.26.1"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
serde_json = "1.0.150"
toml = "1.1.2"
rune = { version = "0.14.2", features = ["emit", "std", "cli"] }
parking_lot = "0.12.5"
heck = "0.5.0"
eyre = "0.6.12"

# Tree-sitter parsers
tree-sitter = "0.26.3"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-java = "0.23.5"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-json = "0.24.8"
tree-sitter-yaml = "0.7.2"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
tree-sitter-bash = "0.25.1"
