[package]
name = "core_lib"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "core_lib"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
crossbeam-channel = { workspace = true }
imara-diff = { workspace = true }
rustc-hash = { workspace = true }
walkdir = { workspace = true }
syntect = { workspace = true }
ratatui = { workspace = true }
two-face = { workspace = true }
diffy = { workspace = true }
