[package]
name = "oyui-rune-actions"
version = "0.0.5"
edition = "2021"
description = "A declarative framework for defining nested action hierarchies, generating handler traits, and registering bindings automatically for the Rune scripting language."
license = "MIT OR Apache-2.0"
repository = "https://github.com/emilien-jegou/oyui"
keywords = ["rune", "scripting", "actions", "macros", "dispatch"]
categories = ["development-tools", "rust-patterns"]
homepage = "https://github.com/emilien-jegou/oyui"
readme = "readme.md"

[dependencies]
oyui-rune-actions-derive = { path = "./derive", version = "0.0.5" }
rune = { workspace = true }
