[package]
name = "oyui-tasker"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "oyui_tasker"
path = "./src/lib.rs"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }

[dependencies]
tokio = { workspace = true }
oyui-tasker-derive = { path = "./derive" }
