[package]
name = "oyui"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
oyui-tasker = { path = "../oyui-tasker" }
rayon = { workspace = true }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
syntect = { workspace = true }
walkdir = { workspace = true }
two-face = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
imara-diff = { workspace = true }
clap = { workspace = true }
typed-builder = { workspace = true }
eyre = { workspace = true }
tracing-flame = { workspace = true }
infer = { workspace = true }
