[package]
name = "oyui"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
oyui-tasker = { path = "../oyui-tasker" }
oyui-rune-actions = { path = "../oyui-rune-actions" }
syndiff = { path = "../syndiff" }
rayon = { workspace = true }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
syntect = { workspace = true }
walkdir = { workspace = true }
two-face = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
imara-diff = { workspace = true }
clap = { workspace = true }
typed-builder = { workspace = true }
eyre = { workspace = true }
tracing-flame = { workspace = true }
infer = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
rune = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }

[build-dependencies]
syntect = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
typed-builder = { workspace = true }
rune = { workspace = true }
