[package]
name = "oyui-rune-actions-derive"
description = "Derive crate for oyui-rune-actions"
license = "MIT OR Apache-2.0"
version = "0.0.2"
edition = "2021"
readme = "readme.md"
homepage = "https://github.com/emilien-jegou/oyui"
repository = "https://github.com/emilien-jegou/oyui"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.106"
heck = { workspace = true }
