[package]
name = "oyui-tasker-derive"
description = "Derive crate for oyui-tasker"
license = "MIT OR Apache-2.0"
version = "0.0.6"
edition = "2021"
readme = "readme.md"
homepage = "https://github.com/emilien-jegou/oyui"
repository = "https://github.com/emilien-jegou/oyui"

[lib]
proc-macro = true
path = "./lib.rs"

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
